--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:ital,wght@0,300;0,400;0,500;1,500&family=Ubuntu:wght@300;500;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Oliur Portfolio</title>
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Oliur Rahman</span> World!</h1>
+            <h3>Passionate Hardworking and Learner</h3>
+            <p>
+                Talent means nothing, while experience, acquired in humility and with hard work, means everything. Talent is
+                cheaper than table salt. What separates the talented individual from the successful one is a lot of hard
+                work.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/oliur1549/">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
