--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <h1><span class="orange-color">Oliur Rahman</span> World!</h1>
             <h3>Passionate Hardworking and Learner</h3>
             <p>
-                Talent means nothing, while experience, acquired in humility and with hard work, means everything. Talent is
+                Talent means nothing, while experience, acquired in humility and with hard work, means everything.
+                Talent is
                 cheaper than table salt. What separates the talented individual from the successful one is a lot of hard
                 work.
             </p>
@@ -31,6 +32,22 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/OLIU.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>
+                I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
+                how to make simple website. My goal is to build 3 websites and learn advanced topics.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/oliur1549/">DOWNLOAD RESUME</a>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
