--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Oliur Rahman</span> World!</h1>
@@ -32,7 +32,7 @@
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="images/OLIU.png" alt="">
         </div>
@@ -46,8 +46,24 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/oliur1549/">DOWNLOAD RESUME</a>
         </div>
     </section>
-
-
+    <section class="experience-area">
+        <h1 class="exp">Experiences</h1>
+        <div class="flexible-container experience">
+            <div class="experience-container" id="ex-1">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2023-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div class="experience-container ec" id="ex-2">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2022-2023 | Programming Hero Learner</h3>
+                <p><span style="padding-right: 98px;">I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</span></p>
+            </div>
+        </div>
+    </section>
 </body>
+<footer>
+    <p>© Peter Parker 2023, a Programming Hero initiative.</p>
+</footer>
 
 </html>
