--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="experience-container ec" id="ex-2">
+            <div class="experience-container" id="ex-2">
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange-color">2022-2023 | Programming Hero Learner</h3>
                 <p><span style="padding-right: 98px;">I am the master of HTML, CSS and Javascript. I know everything
