--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="experience-container" id="ex-2">
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange-color">2022-2023 | Programming Hero Learner</h3>
-                <div class="baby-paragraph">
-                    <p>I am the master of HTML, CSS and Javascript. I know everything
+                <div>
+                    <p  class="baby-paragraph">I am the master of HTML, CSS and Javascript. I know everything
                         needed to make a website function, efficient. I didn't stop with the web. I went beyond with
                         most popular Javascript framework called Vue JS. I even know the deployment, server and
                         security. I will give you 100% web solution.
