--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="half-width">
             <h1>Dream Big</h1>
             <h3>Become a web developer</h3>
-            <p>
+            <p class="baby-paragraph">
                 I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
                 how to make simple website. My goal is to build 3 websites and learn advanced topics.
             </p>
@@ -60,7 +60,7 @@
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange-color">2022-2023 | Programming Hero Learner</h3>
                 <div>
-                    <p  class="baby-paragraph">I am the master of HTML, CSS and Javascript. I know everything
+                    <p >I am the master of HTML, CSS and Javascript. I know everything
                         needed to make a website function, efficient. I didn't stop with the web. I went beyond with
                         most popular Javascript framework called Vue JS. I even know the deployment, server and
                         security. I will give you 100% web solution.
